<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_item_sort_by"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="filter_by"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/filter_room"
                android:title="@string/menu_title_filtre_par_salle"
                app:showAsAction="never"/>
            <item android:id="@+id/filter_date"
                android:title="@string/menu_title_filtre_par_date"
                app:showAsAction="never"/>
            <item android:id="@+id/reset"
                android:title="@string/menu_title_réinitialisation"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>