<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.AddMeetingFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addMeeting_tf_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:hint="@string/fragment_add_meeting_tv_room">

        <AutoCompleteTextView
            android:id="@+id/addMeeting_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addMeeting_tf_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/addMeeting_tf_room"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addMeeting_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_add_meeting_tv_sujet"
            android:maxLines="1"
            android:maxLength="30"
            android:minLines="1"
            android:imeOptions="actionNone"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addMeeting_button_saveTime"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_add_meeting_text_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addMeeting_tf_subject" />

    <TextView
            android:id="@+id/addMeeting_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/addMeeting_button_saveTime"
            app:layout_constraintBottom_toBottomOf="@id/addMeeting_button_saveTime"
            app:layout_constraintTop_toTopOf="@id/addMeeting_button_saveTime"
            android:text="@string/fragment_add_meeting_tv_heure"/>

        <TextView
            android:id="@+id/addMeeting_TextView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/addMeeting_tv_time"
            app:layout_constraintBottom_toBottomOf="@id/addMeeting_tv_time"
            tools:text="12h30"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMeeting_button_saveDate"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addMeeting_button_saveTime"
            android:text="@string/fragment_add_meeting_text_button_date" />

        <TextView
            android:id="@+id/addMeeting_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/addMeeting_button_saveDate"
            app:layout_constraintBottom_toBottomOf="@id/addMeeting_button_saveDate"
            app:layout_constraintTop_toTopOf="@id/addMeeting_button_saveDate"
            android:text="@string/fragment_add_meeting_text_tv_date"/>
        <TextView
            android:id="@+id/addMeeting_TextView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@id/addMeeting_tv_date"
            app:layout_constraintBottom_toBottomOf="@id/addMeeting_tv_date"
            tools:text="01/03/2022"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMeeting_button_addEmails"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addMeeting_button_saveDate"
            android:text="@string/fragment_add_meeting_text_button_mails" />

        <TextView
            android:id="@+id/addMeeting_tv_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/addMeeting_button_addEmails"
            app:layout_constraintTop_toTopOf="@id/addMeeting_button_addEmails"
            app:layout_constraintBottom_toBottomOf="@id/addMeeting_button_addEmails"
            android:text="@string/fragment_add_meeting_tv_participants" />

        <TextView
            android:id="@+id/addMeeting_TextView_emails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/addMeeting_tv_participants"
            app:layout_constraintStart_toStartOf="@id/addMeeting_tv_participants"
            tools:text="sadek@gmail.com"
            android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/addMeeting_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/fragment_add_meeting_text_button_save"
        android:layout_marginTop="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>